--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body{
 }
 
 /* topbar della pagina */
+
 .topbar{
     height: 10vh;
     display: flex;
@@ -19,6 +20,10 @@ body{
     flex-wrap: wrap;
     align-items: center;
     box-shadow: 0px 11px 17px 1px rgba(191,191,191,0.1);
+    background-color: white;
+    position: sticky;
+    top: 0px;
+    z-index: 1000;
 }
 
 
@@ -212,8 +217,6 @@ body{
 .sidebar-mid{
     margin-top: 5rem;
     margin-left: 44px;
-    position: sticky;
-    top: 0;
 }
 
 .topics{
